complete face id login

--- a/PantryPal/Views/Ingredients/Barcode/BarcodeScanner.storyboard
+++ b/PantryPal/Views/Ingredients/Barcode/BarcodeScanner.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="89"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dth-3g-qyA">
-                                        <rect key="frame" x="8" y="60" width="39" height="40"/>
+                                        <rect key="frame" x="8" y="51" width="39" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="X6T-Dh-bmm"/>
                                             <constraint firstAttribute="width" constant="39" id="h2f-Q0-hyb"/>
@@ -32,21 +32,12 @@
                                             <action selector="dismissAction" destination="Aky-R1-WNs" eventType="touchUpInside" id="ll7-5E-5X5"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="掃描商品條碼" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LhT-d4-CBA">
-                                        <rect key="frame" x="132" y="67" width="128.33333333333337" height="26"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGrayColor"/>
                                 <constraints>
-                                    <constraint firstItem="LhT-d4-CBA" firstAttribute="leading" secondItem="bH1-jf-lfh" secondAttribute="leading" constant="132" id="1i4-yX-rJL"/>
-                                    <constraint firstItem="Dth-3g-qyA" firstAttribute="top" secondItem="bH1-jf-lfh" secondAttribute="top" constant="60" id="F5h-rx-Giu"/>
+                                    <constraint firstItem="Dth-3g-qyA" firstAttribute="top" secondItem="bH1-jf-lfh" secondAttribute="top" constant="51" id="F5h-rx-Giu"/>
                                     <constraint firstAttribute="height" constant="89" id="J4b-eq-IS0"/>
                                     <constraint firstItem="Dth-3g-qyA" firstAttribute="leading" secondItem="bH1-jf-lfh" secondAttribute="leading" constant="8" id="gum-a2-a2U"/>
-                                    <constraint firstAttribute="trailing" secondItem="LhT-d4-CBA" secondAttribute="trailing" constant="132.66999999999999" id="imU-Dd-YFe"/>
-                                    <constraint firstItem="LhT-d4-CBA" firstAttribute="top" secondItem="bH1-jf-lfh" secondAttribute="top" constant="67" id="jkD-SJ-wr8"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="沒有偵測到商品條碼" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CIS-QV-OwA">
@@ -60,6 +51,16 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="掃描商品條碼" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LhT-d4-CBA">
+                                <rect key="frame" x="132" y="687" width="128.33333333333337" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="4EZ-yi-sJI"/>
+                                    <constraint firstAttribute="width" constant="130" id="Wrq-C2-aeH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="pjs-IG-gY9"/>
                         <color key="backgroundColor" red="0.55686277149999996" green="0.55686277149999996" blue="0.57647061349999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -67,7 +68,10 @@
                             <constraint firstItem="CIS-QV-OwA" firstAttribute="leading" secondItem="pjs-IG-gY9" secondAttribute="leading" id="AsB-KV-zwG"/>
                             <constraint firstItem="CIS-QV-OwA" firstAttribute="trailing" secondItem="pjs-IG-gY9" secondAttribute="trailing" id="JF4-xO-3YN"/>
                             <constraint firstItem="bH1-jf-lfh" firstAttribute="top" secondItem="VED-eA-k2m" secondAttribute="top" id="LlG-Zw-bzY"/>
+                            <constraint firstItem="LhT-d4-CBA" firstAttribute="leading" secondItem="pjs-IG-gY9" secondAttribute="leading" constant="132" id="T9M-9e-aHw"/>
                             <constraint firstItem="bH1-jf-lfh" firstAttribute="trailing" secondItem="pjs-IG-gY9" secondAttribute="trailing" id="dzT-Tl-uzu"/>
+                            <constraint firstItem="pjs-IG-gY9" firstAttribute="trailing" secondItem="LhT-d4-CBA" secondAttribute="trailing" constant="132.66999999999999" id="fwu-tT-0ZF"/>
+                            <constraint firstAttribute="bottom" secondItem="LhT-d4-CBA" secondAttribute="bottom" constant="135" id="jnd-en-7Cb"/>
                             <constraint firstItem="bH1-jf-lfh" firstAttribute="leading" secondItem="pjs-IG-gY9" secondAttribute="leading" id="oMv-El-1a6"/>
                             <constraint firstItem="pjs-IG-gY9" firstAttribute="bottom" secondItem="CIS-QV-OwA" secondAttribute="bottom" constant="53" id="x8K-4U-cqJ"/>
                         </constraints>
